correction of youtube player vudeo on mobile version

--- a/styles/Thanks.module.scss
+++ b/styles/Thanks.module.scss
@@ -94,11 +94,9 @@
     }
 }
 .video__body {
-    iframe {
     @media screen and (max-width: 576px) {
         @apply h-[230px];
     }
-}
 }
 .video_responsive {
     // overflow: hidden;
